Fixed missing right spacing on overflow of source container

--- a/src/assets/stylesheets/layout/_source.scss
+++ b/src/assets/stylesheets/layout/_source.scss
@@ -59,6 +59,7 @@
 // Source container
 .md-source {
   display: block;
+  padding-right: 1.2rem;
   transition: opacity 0.25s;
   font-size: 1.3rem;
   line-height: 1.2;
